# lima-python

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CMakeLists.txt  Doc.cpp  Doc.h  Doc_private.h  Dockerfile  Dockerfile-manylinux_2_28  Dockerfile-tests  Dockerfile-tests-actions  LICENCE  MANIFEST.in  README.md  Span.cpp  Span.h  Token.cpp  Token.h  bindings.h  bindings.xml  c2lc.txt  deploy-manylinux_2_28.sh  deploy.sh  gbuild-manylinux_2_28.sh  gbuild.sh  lima-test.py  lima.cpp  lima.h  limatest.py  macros.h  main.py  manageQt.cmake  manageQt5.cmake  pyproject.toml  python_env.sh  python_env_qt6.sh  requirements.txt  (+1 more)
.github/workflows/: build-qt6.yml
aymara/: clients.py  deeplima_models.py  lima.py  lima_models.py  version.py
aymaralima/: lima.py  lima_analyzer.py
docs/: requirements.txt
docs/source/: aymara.rst  conf.py  index.rst  limatest.rst  modules.rst
examples/: build-pipeline.py  install-language.sh  install-lima-python.sh  test-wol.txt  try-lima-python-api.py
scripts/: linuxdeploy.py
tests/: lima-test.py  test__lima_models.py  test_aymara.py  test_cpplima.py  test_lima.py  test_lima_models.py
utils/: pyside2_config.py  utils.py
