[tool.poetry]
name = "aymara"
version = "0.2.3"
description = "Python bindings to the LIMA linguistic analyzer"
authors = ["Gael de Chalendar <gael.de-chalendar@cea.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
pyconll = "^2.0"
requests = "^2.22"
PySide2 = "^5.12"
docker = "^4.1.0"
tqdm = "^4.56.0"
unix-ar = "^0.2.1b"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
