# Copyright 2019-2022 CEA LIST
# SPDX-FileCopyrightText: 2019-2022 CEA LIST <gael.de-chalendar@cea.fr>
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "aymara"
version = "0.4.0"
description = "Python bindings to the LIMA linguistic analyzer"
authors = ["Gael de Chalendar <gael.de-chalendar@cea.fr>"]

[tool.poetry.dependencies]
pip = "^22.0"
pydantic = "^1.8.2"
python = "^3.7"
pyconll = "^2.0"
requests = "^2.22"
shiboken2 = "^5.15.2"
tqdm = "^4.56.0"
unix-ar = "^0.2.1b"


[tool.poetry.dev-dependencies]
PySide2 = "^5.12"
pytest = "^3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]

#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
