# Copyright 2019-2022 CEA LIST
# SPDX-FileCopyrightText: 2019-2022 CEA LIST <gael.de-chalendar@cea.fr>
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "aymara"
version = "0.5.0b6"
description = "Python bindings to the LIMA linguistic analyzer"
authors = ["Gael de Chalendar <gael.de-chalendar@cea.fr>"]

[tool.poetry.dependencies]
pip = "^22.0"
pydantic = "^1.8.2"
python = ">=3.7,<4"
pyconll = "^2.0"
requests = "^2.22"
shiboken6 = "^6.5"
tqdm = "^4.56.0"
unix-ar = "^0.2.1b"


[tool.poetry.dev-dependencies]
PySide6 = "^6.3"
pytest = "^3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = [
  "setuptools>=42",
  "scikit-build",
  "cmake",
  "ninja; platform_system!='Windows'",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]
